--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+server.port=8080
+server.servlet.context-path=/music
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.name=defaultDataSource
+spring.datasource.url=jdbc:mysql://localhost:3306/username
+spring.datasource.username=root
+spring.datasource.password=love
